test/data/resolver/valid/aggregate_at_with.cypher
MATCH (a:Person) WITH count(a) AS n RETURN n
