test/data/resolver/invalid/set_property_on_projection_alias.cypher
MATCH (n:Person) WITH count(n) AS c SET c.p = 1
